examples/test/testpolicy19938.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19938
  namespace: namespace372
spec:
  podSelector:
    matchLabels:
      key26: value30
      key49: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value31
          key44: value15
      podSelector:
        matchLabels:
          key36: value4
          key49: value46
